# CommonLibs

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
doc/: directoryStructure.md  start_working.md
packaging/: CMakeLists.txt  DS_Store.scpt  exampleApp.desktop  exampleApp.icon.in.rc
source/: CMakeLists.txt  Example.h  Example.toml  main.cpp
source/Common/: CMakeLists.txt  NonCopyable.h  StreamSocket.h  TCPSocket.h  TLSSocket.h  TSC.cpp  TSC.h  ThreadPool.h  UDPSocket.h  Util.h  Websocket.h
source/EventLoop/: CMakeLists.txt  DmaBuffer.h  EventLoop.cpp  EventLoop.h  ExecutionBuilder.h  Executor.hpp  File.h  Topology.h  UringCommands.h  design.md
source/MQTT/: MQTTBroker.h  MQTTClient.h  MQTTPacket.h
source/Statwriter/: CMakeLists.txt  StatWriter.cpp  StatWriter.h
source/unittest/: CMakeLists.txt
test/: CMakeLists.txt  Common.cpp  Eventloop.cpp  coroutine.cpp  file.cpp  io_uring.cpp  main.cpp  tcp.cpp  threading.cpp  topology.cpp  websocket.cpp
